objects/Acxiom_Integration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Access_type_cd__c</fullName>
        <label>Access-type-cd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_type_cd__c</fullName>
        <label>Channel-type-cd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client_Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPointURL__c</fullName>
        <label>EndPointURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <label>Host</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestTimeOut__c</fullName>
        <label>RequestTimeOut</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_cd__c</fullName>
        <label>Vendor-cd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Id__c</fullName>
        <label>Website-Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Acxiom Integration</label>
</CustomObject>